--- a/src/qt/res/bitcoin-qt.rc
+++ b/src/qt/res/bitcoin-qt.rc
@@ -18,14 +18,14 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "NovaCoin"
-            VALUE "FileDescription",    "NovaCoin-Qt (OSS GUI client for NovaCoin)"
+            VALUE "CompanyName",        "AlbaCoin"
+            VALUE "FileDescription",    "AlbaCoin-Qt (OSS GUI client for AlbaCoin)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "albacoin-qt"
-            VALUE "LegalCopyright",     "2009-2012 The Bitcoin developers, 2012-2013 The NovaCoin & PPCoin developers"
+            VALUE "LegalCopyright",     "2009-2012 The Bitcoin developers, 2012-2013 The AlbaCoin & PPCoin developers"
             VALUE "LegalTrademarks1",   "Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
             VALUE "OriginalFilename",   "albacoin-qt.exe"
-            VALUE "ProductName",        "NovaCoin-Qt"
+            VALUE "ProductName",        "AlbaCoin-Qt"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
